--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
 </head>
   
 <body>
+  <header>
+	  <h1>Welcome to Leitrim Today</h1>
+	  <p>Proud of where we're from and sharing local news</p>
+  </header>
 </body>
 </html>
