--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
 </head>
   
 <body>
-  <header>
+	
+  <header id="home">
 	  <h1>Welcome to Leitrim Today</h1>
 	  <p>Proud of where we're from and sharing local news</p>
   </header>
+	
+  <nav>
+	<a href="#home" aria-label="Go to the top of the page">Home</a>
+	<a href="events.html" aria-label="Go to local events section">Local Events</a>
+	<a href="news.html" aria-label="Go to local news section">Local News</a>
+  </nav>
+	
 </body>
+	
 </html>
