--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<a href="events.html" aria-label="Go to local events section">Local Events</a>
 	<a href="news.html" aria-label="Go to local news section">Local News</a>
   </nav>
+<p>Hi and welcome, my name is Séamus, thank you for dropping by. I guess my intention is to present a more modern means of sharing local events and news, including social media updates, for a younger generation not interested in existing newspapers and websites.</p>
 	
 </body>
 	
