Added news.html, events.html, experimented with colours and styling in style.css and moved links into header

--- a/index.html
+++ b/index.html
@@ -4,30 +4,36 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Leitrim Today, a local based online feed of events and social media updates. News for a newer generation">
+	<meta name="description"
+		content="Leitrim Today, a local based online feed of events and social media updates. News for a newer generation">
 	<meta name="keywords" content="Leitrim Today, local news, online news, social events, leitrim">
 	<meta name="author" content="Séamus Kelly">
 
 	<link rel="stylesheet" href="style.css">
-	
+
 	<title>Leitrim Today</title>
 
 </head>
-  
+
 <body>
+
+	<header id="home">
+		<h1>Welcome to Leitrim Today
+			<br>
+			<nav>
+				<a href="#home" aria-label="Go to the top of the page">Home</a>
+				<a href="events.html" aria-label="Go to local events section">Local Events</a>
+				<a href="news.html" aria-label="Go to local news section">Local News</a>
+			</nav>
+		</h1>
+		<p>Proud of where we're from and sharing local news</p>
+	</header>
+
 	
-  <header id="home">
-	  <h1>Welcome to Leitrim Today</h1>
-	  <p>Proud of where we're from and sharing local news</p>
-  </header>
-	
-  <nav>
-	<a href="#home" aria-label="Go to the top of the page">Home</a>
-	<a href="events.html" aria-label="Go to local events section">Local Events</a>
-	<a href="news.html" aria-label="Go to local news section">Local News</a>
-  </nav>
-<p>Hi and welcome, my name is Séamus, thank you for dropping by. I guess my intention is to present a more modern means of sharing local events and news, including social media updates, for a younger generation not interested in existing newspapers and websites.</p>
-	
+	<p>Hi and welcome, my name is Séamus, thank you for dropping by. I guess my intention is to present a more modern
+		means of sharing local events and news, including social media updates, for a younger generation not interested
+		in existing newspapers and websites.</p>
+
 </body>
-	
+
 </html>
