Created an assets folder containing a css folder and an images folder. Uploaded some pictures I have taken and moved style.css to the assets/css folder. Made changes to code to reflect the new file paths. Added an image to index.html and placed text to its left

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="Leitrim Today, local news, online news, social events, leitrim">
 	<meta name="author" content="Séamus Kelly">
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 
 	<title>Leitrim Today</title>
 
@@ -26,13 +26,30 @@
 				<a href="news.html" aria-label="Go to local news section">Local News</a>
 			</nav>
 		</h1>
+		
 		<p>Proud of where we're from and sharing local news</p>
+
+		<div class="float-left">
+			<p>Welcome to Leitrim Today, where users registered on this site can post updates of news and events from around the county. 
+			<br>The information contained here will allow visitors and holiday makers to discover local points of interest as they visit County Leitrim.
+			<br>I grew up in a rural area near Dromahair in North County Leitrim and I have always had a love for my home county, the image to the right shows the view from the hill behind my family home.
+			<br>I walked this hill most mornings and evenings as a teenager checking on the cattle for my father. 
+			There is no way to describe the feeling of being on a windswept hill in wind swept or stormy weather feeling that connection to nature.
+			I have spent far too many years away from my home, my family and friends, and hope to reconnect in the coming years.
+			</p>
+		</div>
+		
+		<div class="float-right">
+
+			<img src="assets/images/view from hill.jpg" 
+				alt="A view of North County Leitrim from behind my family home" width="600">
+				
+		</div>
+		
 	</header>
 
 	
-	<p>Hi and welcome, my name is Séamus, thank you for dropping by. I guess my intention is to present a more modern
-		means of sharing local events and news, including social media updates, for a younger generation not interested
-		in existing newspapers and websites.</p>
+	
 
 </body>
 
