--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="Leitrim Today, local news, online news, social events, leitrim">
 	<meta name="author" content="Séamus Kelly">
 
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="assets/css/style.css">
 	
 	<title>News</title>
 
