--- a/index.html
+++ b/index.html
@@ -17,36 +17,45 @@
 
 <body>
 
-	<header id="home">
+	<header class="fixed-top" id="home">
 		<h1>Welcome to Leitrim Today
 			<br>
 			<nav>
 				<a href="#home" aria-label="Go to the top of the page">Home</a>
 				<a href="events.html" aria-label="Go to local events section">Local Events</a>
 				<a href="news.html" aria-label="Go to local news section">Local News</a>
+				<a href="register.html" aria-label="Go to registration section">Register</a>
 			</nav>
 		</h1>
-		
-		<p>Proud of where we're from and sharing local news</p>
+	</header>
+	
+	<body>
+		<h2>Proud of where we're from and sharing local news</h2>
 
 		<div class="float-left">
 			<p>Welcome to Leitrim Today, where users registered on this site can post updates of news and events from around the county. 
 			<br>The information contained here will allow visitors and holiday makers to discover local points of interest as they visit County Leitrim.
-			<br>I grew up in a rural area near Dromahair in North County Leitrim and I have always had a love for my home county, the image to the right shows the view from the hill behind my family home.
+			<br>The images to the right show the area of North Leitrim where I grew up.
 			<br>I walked this hill most mornings and evenings as a teenager checking on the cattle for my father. 
-			There is no way to describe the feeling of being on a windswept hill in wind swept or stormy weather feeling that connection to nature.
+			There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather, 
+			feeling that connection to nature and the land of my forefathers.
 			I have spent far too many years away from my home, my family and friends, and hope to reconnect in the coming years.
 			</p>
 		</div>
 		
 		<div class="float-right">
 
-			<img src="assets/images/view from hill.jpg" 
-				alt="A view of North County Leitrim from behind my family home" width="600">
+			<img src="assets/images/viewfromhill.jpg" 
+				alt="A view of North County Leitrim from behind my family home">
+			
+			<img src="assets/images/cows.jpg" 
+				alt="My father's cattle, he was a full time worker and only kept a handful of animals year by year">
 				
+				<img src="assets/images/viewfromhill2.jpg" 
+				alt="A view of North County Leitrim">	
 		</div>
 		
-	</header>
+	</body>
 
 	
 	
