Fixed issue where text was obscured behind header

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 	</header>
 	
 	<body>
-		<h2>Proud of where we're from and sharing local news</h2>
+		<div>
+			<h2>Proud of where we're from and sharing local news</h2>
 
-		<div class="float-left">
+		<article class="float-left">
 			<p>Welcome to Leitrim Today, where users registered on this site can post updates of news and events from around the county. 
 			<br>The information contained here will allow visitors and holiday makers to discover local points of interest as they visit County Leitrim.
 			<br>The images to the right show the area of North Leitrim where I grew up.
@@ -41,7 +42,7 @@
 			feeling that connection to nature and the land of my forefathers.
 			I have spent far too many years away from my home, my family and friends, and hope to reconnect in the coming years.
 			</p>
-		</div>
+		</article>
 		
 		<div class="float-right">
 
@@ -54,7 +55,7 @@
 				<img src="assets/images/viewfromhill2.jpg" 
 				alt="A view of North County Leitrim">	
 		</div>
-		
+		</div>
 	</body>
 
 	
