--- a/news.html
+++ b/news.html
@@ -20,10 +20,11 @@
 	  <h1>News from Leitrim Today
         <br>
         <nav>
-            <a href="index.html" aria-label="Go to the top of the page">Home</a>
-            <a href="events.html" aria-label="Go to local events section">Local Events</a>
-            <a href="news.html" aria-label="Go to local news section">Local News</a>
-          </nav>
+          <a href="index.html" aria-label="Go to the top of the page">Home</a>
+          <a href="events.html" aria-label="Go to local events section">Local Events</a>
+          <a href="news.html" aria-label="Go to local news section">Local News</a>
+          <a href="register.html" aria-label="Go to registration section">Register</a>
+        </nav>
       </h1>
 	  <p>Proud of where we're from and sharing local news</p>
   </header>
