--- a/events.html
+++ b/events.html
@@ -25,12 +25,15 @@
           <a href="news.html" aria-label="Go to local news section">Local News</a>
           <a href="register.html" aria-label="Go to registration section">Register</a>
         </nav>
-      </h1>
-	  <p>Proud of where we're from and sharing local news</p>
-  </header>
+    </h1>
+	</header>
 	
-  
-<p>This is where I will either create articles for use for events or try to create links to other sites for events in area</p>
+  <article>
+    <img src="assets/images/streaminwinter.jpg" 
+				alt="A view of a stream through bushes in winter">
+        <p>This is where I will either create articles for use for events or try to create links to other sites for events in area</p>
+  </article>
+
 	
 </body>
 	
