--- a/news.html
+++ b/news.html
@@ -17,7 +17,8 @@
 <body>
 	
   <header>
-	  <h1>News from Leitrim Today
+	  
+    <h1>News from Leitrim Today
         <br>
         <nav>
           <a href="index.html" aria-label="Go to the top of the page">Home</a>
@@ -25,13 +26,15 @@
           <a href="news.html" aria-label="Go to local news section">Local News</a>
           <a href="register.html" aria-label="Go to registration section">Register</a>
         </nav>
-      </h1>
-	  <p>Proud of where we're from and sharing local news</p>
+    </h1>
+	  
   </header>
 	
-  
-<p>This is where I will either create articles for use as news or try to create links to other sites for news information</p>
-	
+  <article>
+    <img src="assets/images/LoughGill2.jpg" 
+				alt="A view of Lough Gill facing County Leitrim from County Sligo side">
+    <p>This is where I will either create articles for use as news or try to create links to other sites for news information</p>
+  </article>
 </body>
 	
 </html>
