modified content of index.html

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 			in Manorhamilton, Sean Mac Dhiarmada's cottage between Glenfarne and Kiltyclogher, most towns and villages have places of note to visit.
 			<br>
 			<br>Carrick-on-Shannon is the county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland. Carrick is 
-			popular with stag and hen nights, weddings and weekend life and is	populated by over 4,000 people including some of the nationalities 
-			listed above. Carrick-on-Shannon is on the N4 roadway which connects Sligo to Dublin, there are regular bus and train connections.
+			popular with stag and hen nights, weddings and weekend life and it is populated by over 4,000 people including some of the nationalities 
+			listed above. There are boat hire companies and tours on the River Shannon. Carrick-on-Shannon is on the N4 roadway which connects Sligo to Dublin and there are regular bus and train connections.
 
 			</p>
 		</article>
@@ -66,7 +66,7 @@
 				alt="The road leading to my home in North County Leitrim">
 				
 			<img src="assets/images/viewfromhill2.jpg" 
-				alt="A view of North County Leitrim">
+				alt="A view of the hills of North County Leitrim">
 			
 			<img src="assets/images/cows.jpg" 
 				alt="My father's cattle, he was a full time worker and only kept a handful of animals year by year">
