--- a/news.html
+++ b/news.html
@@ -33,7 +33,15 @@
   <article>
     <img src="assets/images/LoughGill2.jpg" 
 				alt="A view of Lough Gill facing County Leitrim from County Sligo side">
-    <p>This is where I will either create articles for use as news or try to create links to other sites for news information</p>
+    <br>
+    <h2>Water Disruption in Carrick on Shannon</h2>
+    <p>There have been ongoing issues with water supply in the Attinfinlay area of Carrick on Shannon in recent months, 
+      a water main burst it's pipes near Aura leisure complex and efforts to repair it have taken longer than originally anticipated. 
+    A source from Irish Water confirms that engineers suspect a small leak caused loose sand in it's area to act like sandpaper as it 
+    swirled in the water, effectively wearing away at the pipe's seal thus causing the larger leak which resulted in streams of water 
+    running down the street.
+    <br>
+    There are disruptions to supply the morning of Thursday 13th July 2023 as a result, it is hoped supply can be restored by the afternoon.</p>
   </article>
 </body>
 	
