Amended position of images and paragraphs for better presentation

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			
 			<p>The image to the right shows the area of North Leitrim where I grew up.
 			<br>I walked this hill most mornings and evenings as a teenager checking on the cattle for my father. 
-			There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather, 
+			<br>There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather, 
 			feeling that connection to nature and the land of my forefathers.
 			<br>
 			<br>I hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible, 
@@ -64,13 +64,18 @@
 				alt="A view of Lough Gill, County Leitrim">
 
 			<p>From Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar <em>(including of course Glencar Waterfall)</em>,  
-			Fivemilebourne also deserves a mention, in the north of the county, to the Shannon-Erne Waterway which runs from Leitrim Village via 
-			Ballinamore further south, there are no shortage of rivers and lakes, wooded areas and mountains, dramatic waterfalls, and empty space. 
+			<br> in the north of the county, 
+			<br>to the Shannon-Erne Waterway which runs from Leitrim Village via 
+			Ballinamore further south, there are no shortage of rivers and lakes, wooded areas and mountains, dramatic waterfalls, and empty space to explore. 
 			<br>
 			<br>There are historic sites such as Parkes'Castle on the shores of Lough Gill, Creevelea Friary near Dromahair, Hamilton's Castle 
 			in Manorhamilton, Sean Mac Dhiarmada's cottage between Glenfarne and Kiltyclogher, most towns and villages have places of note to visit.
-			</p>
-			
+			<br>
+			<br>
+			There is abundant wildlife with plenty for birdwatchers and wildlife enthusiasts to enjoy, around my home I see Goldfinches, Bluetits, 
+			Great tits, Robins, Sparrows, Swans, Kingfishers, Cranes, as well as Rooks, Ravens and Crows. In addition to birds there are Badgers, 
+			Foxes, Hares, Minks and Red Deer in my locality, Red Squirells are rare but can be found</p>
+
 			<div style="clear: both;"></div>
 			
 			<p>Carrick-on-Shannon is the county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland. Carrick is 
