--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description"
-		content="Leitrim Today, a local based online feed of events and social media updates. News for a newer generation">
+		content="Leitrim Today, a local based online feed of local news, events and social media updates.">
 	<meta name="keywords" content="Leitrim Today, local news, online news, social events, leitrim">
 	<meta name="author" content="Séamus Kelly">
 
@@ -23,8 +23,8 @@
 
 		<nav>
 			<a href="#home" aria-label="Go to the top of the page">Home</a>
-			<a href="#news" aria-label="Go to local news section">Local News</a>
-			<a href="#events" aria-label="Go to local events section">Local Events</a>
+			<a href="#news" aria-label="Go to local news section">News</a>
+			<a href="#events" aria-label="Go to local events section">Events</a>
 			<a href="#register" aria-label="Go to registration section">Register</a>
 		</nav>
 
