--- a/index.html
+++ b/index.html
@@ -213,6 +213,11 @@
 		
 		<h2>Register</h2>
 		
+		<p>We welcome users to submit information to update our content and improve the website. 
+		If you have information to share or would just like to give some feedback please enter 
+		your contact details in the form below.
+		<br>(<em>please keep it polite</em>)</p>
+
 		<form action="https://formdump.codeinstitute.net" method="POST">
 
 			<fieldset>
@@ -232,11 +237,22 @@
 				<legend>Contact Information</legend>
 				
 				<label for="email">Email Address:</label>
-				<input type="email" id="email" name="email" placeholder="you@me.com" required>
+				<input type="email" id="email" name="email" value="admin@leitrimtoday.ie" required>
+			
+			</fieldset>
+
+			<fieldset>
+
+				<legend>Enter Feedback</legend>
+				
+				<label for="feedback" class="block-label">Do you think there is something we can improve?</label>
+				<br>
+				<textarea id="feedback" rows="5" cols="75" name="feedback"></textarea>
 			
 			</fieldset>
 			
 			<input type="submit" value="Submit Your Details">
+			<input type="reset" value="Reset Form">
 		
 		</form>
 
