uploaded new images, added some to webpage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 	</header>
 	
 	<section id="home">
-		
+		<img class="main-image" src="assets/images/loughallen.jpg" 
+				alt="A view of Lough Allen, County Leitrim">
 		<h2>Advertisement-free Information about your locality</h2>
 
 		<article>
@@ -59,11 +60,11 @@
 			</p>
 
 			<div style="clear: both;"></div>
-			<img class="float-left" 
-				src="assets/images/LoughGill.jpg" 
-				alt="A view of Lough Gill, County Leitrim">
+			
 
-			<p>From Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar <em>(including of course Glencar Waterfall)</em>,  
+			<p><img class="float-left" 
+				src="assets/images/LoughGill.jpg" 
+				alt="A view of Lough Gill, County Leitrim">From Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar <em>(including of course Glencar Waterfall)</em>,  
 			<br> in the north of the county, 
 			<br>to the Shannon-Erne Waterway which runs from Leitrim Village via 
 			Ballinamore further south, there are no shortage of rivers and lakes, wooded areas and mountains, dramatic waterfalls, and empty space to explore. 
@@ -78,10 +79,15 @@
 
 			<div style="clear: both;"></div>
 			
-			<p>Carrick-on-Shannon is the county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland. Carrick is 
+			
+
+			<p><img class="float-right" src="assets/images/carrickonshannon.jpg" 
+				alt="A view of the River Shannon at Carrick on Shannon, County Leitrim">Carrick-on-Shannon is the county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland. Carrick is 
 			popular with stag and hen nights, weddings and weekend life and it is populated by over 4,000 people including some of the nationalities 
 			listed above. There are boat hire companies and tours on the River Shannon. Carrick-on-Shannon is on the N4 roadway which connects Sligo 
 			to Dublin and there are regular bus and train connections.</p>
+
+			<div style="clear: both;"></div>
 		</article>
 				
 	</section>
@@ -245,9 +251,9 @@
 
 				<legend>Enter Feedback</legend>
 				
-				<label for="feedback" class="block-label">Would you like to contribute? Do you wish to give feedback?</label>
+				<label for="feedback" class="textarea">Would you like to contribute? Do you wish to give feedback?</label>
 				<br>
-				<textarea id="feedback" rows="5" cols="75" name="feedback"></textarea>
+				<textarea id="feedback" rows="5" cols="50" name="feedback"></textarea>
 			
 			</fieldset>
 			
@@ -283,6 +289,7 @@
 				alt="Valid CSS!">
 		</a>
 	</p>
+	
 </body>
 
 </html>
