Added final image to bottom of document

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			
 			<h3>Welcome to Leitrim Today, where users registered on this site can post updates of news and events from around the county.</h3> 
 			
-			<p>The information contained here will allow visitors and holiday makers to discover local points of interest as they visit County Leitrim.
+			<p>The information contained here will also allow visitors and holiday makers to discover local points of interest as they visit County Leitrim.
 			<br>
 			</p>
 			
@@ -273,6 +273,9 @@
 
 	</section>
 
+	<img class="main-image" src="assets/images/sliabhaniarainn.jpg" 
+	alt="A view of Sliabh An Iarainn, County Leitrim">
+	
 	<footer class="fixed-bottom">
 
 		<span>Find us on:</span>
