--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 
 	<header class="fixed-top">
 		
-		<h1>Welcome to Leitrim Today</h1>
+		<a href="index.html" aria-label="Go to the top of the page">
+			<h1>Leitrim Today</h1>
+		</a>
 
 		<nav>
-			<a href="#home" aria-label="Go to the top of the page">Home</a>
 			<a href="#news" aria-label="Go to local news section">News</a>
 			<a href="#events" aria-label="Go to local events section">Events</a>
 			<a href="#register" aria-label="Go to registration section">Register</a>
