changed hover styling for header, positioned h1 and nav

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 	<header class="fixed-top">
 
 		<a href="index.html" aria-label="Go to top of document">
-			<h1 class="float-left">Leitrim Today</h1>
+			<h1>Leitrim Today</h1>
 		</a>
 
-		<nav class="float-right">
+		<nav>
 			<ul>
 				<li><a href="#news" aria-label="Go to local news section">News</a></li>
 				<li><a href="#events" aria-label="Go to local events section">Events</a></li>
@@ -33,7 +33,7 @@
 
 	</header>
 
-	<section id="home">
+	<section>
 		<img class="main-image" src="assets/images/loughallen.jpg" alt="A view of Lough Allen, County Leitrim">
 		<h2>Advertisement-free Information about your locality</h2>
 
