replaced images with lower resolution alternatives of same name, add main image to page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 	</header>
 
 	<section>
-		<img class="main-image" src="assets/images/loughallen.jpg" alt="A view of Lough Allen, County Leitrim">
+		
+		<div id="main-image"></div>
+		
 		<h2>Advertisement-free Information about your locality</h2>
 
 		<article>
