attempted to add background image with no success

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 	</section>
 
-	<img class="main-image" src="assets/images/sliabhaniarainn.jpg" alt="A view of Sliabh An Iarainn, County Leitrim">
+	<img src="assets/images/sliabhaniarainn.jpg" alt="A view of Sliabh An Iarainn, County Leitrim">
 
 	<footer class="fixed-bottom">
 
@@ -353,13 +353,7 @@
 			aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
 		Copyright © Séamus Kelly 2023
 	</footer>
-	<p>
-		<a href="http://jigsaw.w3.org/css-validator/check/referer">
-			<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss"
-				alt="Valid CSS!">
-		</a>
-	</p>
-
+	
 </body>
 
 </html>
