uploaded new image, made main image at start of webpage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 
 	<section>
 		
-		<div id="main-image"></div>
+		<div>
+			<img src="assets/images/loughallen2.jpg" id="main-image"
+					alt="A view of Lough Allen from County Leitrim">
+		</div>
 		
 		<h2>Advertisement-free Information about your locality</h2>
 
@@ -338,8 +341,6 @@
 			site.</p>
 
 	</section>
-
-	<img src="assets/images/sliabhaniarainn.jpg" alt="A view of Sliabh An Iarainn, County Leitrim">
 
 	<footer class="fixed-bottom">
 
