again tried to set background image with no success

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 	<section>
 		
-		<div>
-			<img src="assets/images/loughallen2.jpg" id="main-image"
-					alt="A view of Lough Allen from County Leitrim">
+		<div id="main-image">
+			<!-- <img src="assets/images/loughallen2.jpg" id="main-image"
+					alt="A view of Lough Allen from County Leitrim" no-repeat center center>-->
 		</div>
 		
 		<h2>Advertisement-free Information about your locality</h2>
