--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 
 	</header>
 
-	<section>
+	<section id="zoom-in">
 		
 		<div id="main-image">
 			<!-- <img src="assets/images/loughallen2.jpg" id="main-image"
 					alt="A view of Lough Allen from County Leitrim" no-repeat center center>-->
 		</div>
-		
+	</section>
+	<section>	
 		<h2>Advertisement-free Information about your locality</h2>
 
 		<article>
