created margin above in-page linked sections to prevent being obscured behind header

--- a/index.html
+++ b/index.html
@@ -35,37 +35,46 @@
 
 	<section id="zoom-in">
 		
-		<div id="main-image">
-			<!-- <img src="assets/images/loughallen2.jpg" id="main-image"
-					alt="A view of Lough Allen from County Leitrim" no-repeat center center>-->
-		</div>
+		<div id="main-image"></div>
+
 	</section>
+
 	<section>	
-		<h2>Advertisement-free Information about your locality</h2>
+		<h2>
+			Advertisement-free Information about your locality
+		</h2>
 
 		<article>
 
-			<h3>Welcome to Leitrim Today, where users registered on this site can post updates of news and events from
-				around the county.</h3>
+			<h3>
+				Welcome to Leitrim Today, where users registered on this site can post updates of news and events from
+				around the county.
+			</h3>
 
-			<p>The information contained here will also allow visitors and holiday makers to discover local points of
+			<p>
+				The information contained here will also allow visitors and holiday makers to discover local points of
 				interest as they visit County Leitrim.
-				<br>
 			</p>
 
 			<div>
 
-				<img class="float-right" src="assets/images/viewfromhill.jpg"
+				<img class="float-right" src="assets/images/theroadhome.jpg"
 					alt="A view of the hills of North County Leitrim">
 
 			</div>
 
-			<p>The image to the right shows the area of North Leitrim where I grew up.
-				<br>I walked this hill most mornings and evenings as a teenager checking on the cattle for my father.
-				<br>There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather,
+			<p>
+				<br>
+				<br>
+				The image to the right shows the area of North Leitrim where I grew up.
+				<br>
+				I walked this hill most mornings and evenings as a teenager checking on the cattle for my father.
+				<br>
+				There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather,
 				feeling that connection to nature and the land of my forefathers.
 				<br>
-				<br>I hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible,
+				<br>
+				I hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible,
 				it is no coincidence the people from Britain, Germany, Spain, France, Slovakia, Lithuania, Poland and
 				beyond choose to live here.
 			</p>
@@ -73,8 +82,9 @@
 			<div style="clear: both;"></div>
 
 
-			<p><img class="float-left" src="assets/images/LoughGill.jpg" alt="A view of Lough Gill, County Leitrim">From
-				Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar
+			<p>
+				<img class="float-left" src="assets/images/LoughGill.jpg" alt="A view of Lough Gill, County Leitrim">
+				From Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar
 				<em>(including of course Glencar Waterfall)</em>,
 				<br> in the north of the county,
 				<br>to the Shannon-Erne Waterway which runs from Leitrim Village via
@@ -98,15 +108,14 @@
 
 
 
-			<p><img class="float-right" src="assets/images/carrickonshannon.jpg"
-					alt="A view of the River Shannon at Carrick on Shannon, County Leitrim">Carrick-on-Shannon is the
-				county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland.
-				Carrick is
-				popular with stag and hen nights, weddings and weekend life and it is populated by over 4,000 people
-				including some of the nationalities
-				listed above. There are boat hire companies and tours on the River Shannon. Carrick-on-Shannon is on the
-				N4 roadway which connects Sligo
-				to Dublin and there are regular bus and train connections.</p>
+			<p>
+				<img class="float-right" src="assets/images/carrickonshannon.jpg"
+					alt="A view of the River Shannon at Carrick on Shannon, County Leitrim">
+				Carrick-on-Shannon is the county town, the largest in County Leitrim by a good margin and yet the smallest such in Ireland.
+				Carrick is popular with stag and hen nights, weddings and weekend life and it is populated by over 4,000 people
+				including some of the nationalities	listed above. There are boat hire companies and tours on the River Shannon. Carrick-on-Shannon is on the
+				N4 roadway which connects Sligo	to Dublin and there are regular bus and train connections.
+			</p>
 
 			<div style="clear: both;"></div>
 		</article>
@@ -115,7 +124,7 @@
 
 	<section id="news">
 
-		<h2>News</h2>
+		<h2 id="spacer">News</h2>
 
 		<article>
 
@@ -192,7 +201,7 @@
 
 	<section id="events">
 
-		<h2>Events</h2>
+		<h2 id="spacer">Events</h2>
 
 		<article>
 
@@ -278,7 +287,7 @@
 
 	<section id="register">
 
-		<h2>Register</h2>
+		<h2 id="spacer">Register</h2>
 
 		<p>We welcome users to submit information to update our content and improve the website.
 			If you have information to share or would just like to give some feedback please enter
