created space around h3's and p's, put border on input boxes of form

--- a/index.html
+++ b/index.html
@@ -289,7 +289,8 @@
 
 		<h2 id="spacer">Register</h2>
 
-		<p>We welcome users to submit information to update our content and improve the website.
+		<p>
+			We welcome users to submit information to update our content and improve the website.
 			If you have information to share or would just like to give some feedback please enter
 			your contact details and a short message in the form below.
 			<br>(<em>please keep it polite</em>)
