created about us section with three divs

--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
 
 	</section>
 
-	<section>	
-		<h2>
-			Advertisement-free Information about your locality
-		</h2>
+	<section id="about-us">
+		
+		<h2>Interactive News and Events for County Leitrim</h2>
+
+		<div id="left-most"></div>
+		<div id="right-most"></div>
+		<div id="centremost"></div>
+
+	</section>
 
 		<article>
 
