edited left and right divs with about us information

--- a/index.html
+++ b/index.html
@@ -43,23 +43,49 @@
 		
 		<h2>Interactive News and Events for County Leitrim</h2>
 
-		<div id="left-most"></div>
-		<div id="right-most"></div>
+		<div id="left-most">
+			<div class="left-most-heading">
+				<h2>Leitrim Today</h2>
+				<p>
+					Where users registered on this site can post updates of news and events from
+					around the county.
+				</p>
+			</div>
+			<div class="left-most-heading">
+				<h2>Learn About Leitrim</h2>
+				<p>
+					The information contained here will also allow visitors and holiday makers to discover local points of
+				    interest as they visit County Leitrim. We believe it is no coincidence that people from Britain, Germany, 
+					Spain, France, Slovakia, Lithuania, Poland and beyond choose to live here.
+				</p>
+			</div>
+		</div>
+
+		<div id="right-most">
+			<div class="right-most-heading">
+				<h2>Our Aim</h2>
+				<p>
+					We hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible.
+				</p>
+			</div>
+			<div class="right-most-heading">
+				<h2>Benefit For Everyone</h2>
+				<p>
+					As a non-profit we seek to raise visitor levels and attendances at events, to improve footfall for local businesses and 
+					boost the local economy in any way possible. Locals share information that anyone can access and make use of.
+				</p>
+			</div>
+		</div>
+
 		<div id="centremost"></div>
 
 	</section>
 
 		<article>
 
-			<h3>
-				Welcome to Leitrim Today, where users registered on this site can post updates of news and events from
-				around the county.
-			</h3>
+			<h3></h3>
 
-			<p>
-				The information contained here will also allow visitors and holiday makers to discover local points of
-				interest as they visit County Leitrim.
-			</p>
+			<p></p>
 
 			<div>
 
