uploaded modified image for circle image in about us section and coded same onto webpage

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 	<section id="about-us">
 		
-		<h2>Interactive News and Events for County Leitrim</h2>
+		<h2 id="welcome">Interactive News and Events for County Leitrim</h2>
 
 		<div id="left-most">
 			<div class="left-most-heading">
@@ -65,7 +65,7 @@
 			<div class="right-most-heading">
 				<h2>Our Aim</h2>
 				<p>
-					We hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible.
+					We hope to raise awareness of Leitrim, it's towns and villages, sights and scenery, and all it has to offer to as wide an audience as possible.
 				</p>
 			</div>
 			<div class="right-most-heading">
@@ -77,7 +77,13 @@
 			</div>
 		</div>
 
-		<div id="centremost"></div>
+		<div id="centremost">
+			<div id="circle-maker">
+				<div id="circle-background">
+
+				</div>
+			</div>
+		</div>
 
 	</section>
 
