inserted font awesome icons

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 
 		<div id="left-most">
 			<div class="left-most-heading">
-				<h2>Leitrim Today</h2>
+				<h2>Leitrim Today <i class="fa-solid fa-user-group"></i></h2>
 				<p>
 					Where users registered on this site can post updates of news and events from
 					around the county.
 				</p>
 			</div>
 			<div class="left-most-heading">
-				<h2>Learn About Leitrim</h2>
+				<h2>Learn About Leitrim <i class="fa-solid fa-leaf"></i></h2>
 				<p>
 					The information contained here will also allow visitors and holiday makers to discover local points of
 				    interest as they visit County Leitrim. We believe it is no coincidence that people from Britain, Germany, 
@@ -63,13 +63,13 @@
 
 		<div id="right-most">
 			<div class="right-most-heading">
-				<h2>Our Aim</h2>
+				<h2>Our Aim <i class="fa-solid fa-landmark"></i></h2>
 				<p>
 					We hope to raise awareness of Leitrim, it's towns and villages, sights and scenery, and all it has to offer to as wide an audience as possible.
 				</p>
 			</div>
 			<div class="right-most-heading">
-				<h2>Benefit For Everyone</h2>
+				<h2>Benefit For Everyone <i class="fa-regular fa-handshake"></i></h2>
 				<p>
 					As a non-profit we seek to raise visitor levels and attendances at events, to improve footfall for local businesses and 
 					boost the local economy in any way possible. Locals share information that anyone can access and make use of.
@@ -395,14 +395,17 @@
 		<span>Find us on:</span>
 
 		<a href="https://www.facebook.com" target="_blank" rel="noopener"
-			aria-label="Find us on Facebook (link opens in a new tab)">Facebook</a>
+			aria-label="Find us on Facebook (link opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
 		<a href="https://www.instagram.com" target="_blank" rel="noopener"
-			aria-label="Find us on Instagram (link opens in a new tab)">Instagram</a>
+			aria-label="Find us on Instagram (link opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
 		<a href="https://www.twitter.com" target="_blank" rel="noopener"
-			aria-label="Find us on Twitter (link opens in a new tab)">Twitter</a>
+			aria-label="Find us on Twitter (link opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
 		Copyright © Séamus Kelly 2023
 	</footer>
-	
+
+	<!--Font Awesome Script-->
+	<script src="https://kit.fontawesome.com/2f0a9d92e9.js" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
