Removed placeholder text and images, created About Leitrim section

--- a/index.html
+++ b/index.html
@@ -86,41 +86,20 @@
 		</div>
 
 	</section>
-
+	
+	<section>
+		
 		<article>
 
-			<h3></h3>
-
-			<p></p>
+			<h3>About Leitrim</h3>
 
 			<div>
 
-				<img class="float-right" src="assets/images/theroadhome.jpg"
-					alt="A view of the hills of North County Leitrim">
+				<img class="float-left" src="assets/images/LoughGill.jpg" alt="A view of Lough Gill, County Leitrim">
 
 			</div>
 
 			<p>
-				<br>
-				<br>
-				The image to the right shows the area of North Leitrim where I grew up.
-				<br>
-				I walked this hill most mornings and evenings as a teenager checking on the cattle for my father.
-				<br>
-				There is no way to describe the feeling I enjoyed of being on a windswept hill in stormy weather,
-				feeling that connection to nature and the land of my forefathers.
-				<br>
-				<br>
-				I hope to raise awareness of Leitrim and all it has to offer to as wide an audience as possible,
-				it is no coincidence the people from Britain, Germany, Spain, France, Slovakia, Lithuania, Poland and
-				beyond choose to live here.
-			</p>
-
-			<div style="clear: both;"></div>
-
-
-			<p>
-				<img class="float-left" src="assets/images/LoughGill.jpg" alt="A view of Lough Gill, County Leitrim">
 				From Lough Gill (left), Lough Melvin and the beautiful glaciated valleys of Glenade and Glencar
 				<em>(including of course Glencar Waterfall)</em>,
 				<br> in the north of the county,
@@ -143,8 +122,6 @@
 
 			<div style="clear: both;"></div>
 
-
-
 			<p>
 				<img class="float-right" src="assets/images/carrickonshannon.jpg"
 					alt="A view of the River Shannon at Carrick on Shannon, County Leitrim">
@@ -155,6 +132,7 @@
 			</p>
 
 			<div style="clear: both;"></div>
+
 		</article>
 
 	</section>
