created link to about us section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 		<nav>
 			<ul>
+				<li><a href="#about-us" aria-label="Go to about us section">About Us</a></li>
 				<li><a href="#news" aria-label="Go to local news section">News</a></li>
 				<li><a href="#events" aria-label="Go to local events section">Events</a></li>
 				<li><a href="#register" aria-label="Go to registration section">Register</a></li>
